Added More Queries, Validator Classes, Revised JTables Population - Added validator classes for account and room queries to restrict certain types of input from users when manipulating data in the database through the application(incomplete). - Added variables in the sqlconnection class to support more types of manipulation of data within the database. - Added queries in the room and accounts classes to find specific row data within the database thru ID numbers. - Added logic in the program to actually allow insertion of new data to the account and room tables in the database. - Added logic to search for specific data of the account and room tables thru ID number input in the database, as well as the necessary restrictions for the input type of ID numbers. - Revised queries and logic for the insertion of data within the account and room classes. - Revised the logic for populating the JTables to be dynamic when data is manipulated within the database.

--- a/src/RoomAssignment/Dashboard.form
+++ b/src/RoomAssignment/Dashboard.form
@@ -376,27 +376,27 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="pnlHome" pref="1038" max="32767" attributes="0"/>
+                  <Component id="pnlHome" pref="1046" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlRoomManagement" pref="1038" max="32767" attributes="0"/>
+                      <Component id="pnlRoomManagement" pref="1046" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="2" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlMembers" pref="1038" max="32767" attributes="0"/>
+                      <Component id="pnlMembers" pref="1046" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="3" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlAccount" pref="1038" max="32767" attributes="0"/>
+                      <Component id="pnlAccount" pref="1046" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -1329,6 +1329,9 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="type specific information."/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtRAMSearchActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnRAMSearch">
                   <Properties>
@@ -1941,6 +1944,9 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="type specific information."/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtMUserSearchActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnMUserSearch">
                   <Properties>
